--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^2.0.4"
+	},
+	"dependencies": {
+		"planck-js": "^0.3.31"
 	}
 }
